<resources>
    <string name="app_name">MySharedBooking</string>
    <string name="facebook_app_id">559192524884066</string>
    <string name="fb_login_protocol_scheme">fb559192524884066</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_user">Insert User</string>
    <string name="show_all_users">Show all users</string>
    <string name="users">Users</string>
    <string name="new_booking">New Booking</string>
    <string name="book">Book</string>
    <string name="type">Type</string>
    <string name="set_date">Set Date</string>
    <string name="list_booking">List Booking</string>
    <string name="manage_links">Manage Links</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="publish_book">Publish Book</string>
    <string name="msg_token_fmt" />
    <string name="book_channel_id">bookingchannelid</string>
    <string name="insert_type">Insert Type</string>

</resources>
